<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/museo"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/museo"
            android:gravity="center_horizontal"
            android:text="@string/app_ver"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_12"
            android:layout_marginTop="@dimen/size_12"
            android:background="@null"
            android:src="@drawable/ic_logo_large" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:layout_marginTop="@dimen/size_7"
            android:layout_marginBottom="@dimen/size_7"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo"
            android:gravity="center_horizontal"
            android:text="@string/website"
            android:layout_marginTop="@dimen/size_7"
            android:layout_marginBottom="@dimen/size_7"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>




</RelativeLayout>